[gd_scene load_steps=15 format=3 uid="uid://dqmw33r66itm"]

[ext_resource type="FontFile" uid="uid://cbw141v74acd0" path="res://Gilroy-Light.otf" id="1_vgaj8"]
[ext_resource type="Script" path="res://first.gd" id="1_xml2s"]
[ext_resource type="PackedScene" uid="uid://d0vt6e0urur2r" path="res://wifi_anim_thing.tscn" id="3_rk8ta"]
[ext_resource type="Texture2D" uid="uid://bbx6kuw45qhp0" path="res://pictures/icons8-start-30.png" id="5_ob7tc"]
[ext_resource type="Texture2D" uid="uid://b1khjxly5sfnl" path="res://pictures/icons8-return-100.png" id="5_xjh87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6jbs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2plsk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.988235, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 3.0
expand_margin_right = 15.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mc7jh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsutr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0gah"]

[sub_resource type="Animation" id="Animation_1bs1v"]
resource_name = "Appear"

[sub_resource type="Animation" id="Animation_kebbd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visibles/networking/nmapsniff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(858, 44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visibles/RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l736a"]
resource_name = "Switch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visibles/wifi_anim_thing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visibles/RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visibles/Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visibles/networking/Networking_toggle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visibles/networking/organization:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcejl"]
_data = {
"Appear": SubResource("Animation_1bs1v"),
"RESET": SubResource("Animation_kebbd"),
"Switch": SubResource("Animation_l736a")
}

[node name="first" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xml2s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.101961, 0.14902, 1)

[node name="Visibles" type="Node" parent="."]

[node name="wifi_anim_thing" parent="Visibles" instance=ExtResource("3_rk8ta")]
position = Vector2(558, 578)
scale = Vector2(0.3, 0.3)

[node name="RichTextLabel" type="RichTextLabel" parent="Visibles"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 188.0
offset_right = 216.0
offset_bottom = 214.0
grow_horizontal = 2
text = "\" Click on desired tool theme To access Tools Below \"
"

[node name="Back" type="Button" parent="Visibles"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = 233.0
offset_right = 334.0
offset_bottom = 333.0
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vgaj8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6jbs")
theme_override_styles/hover = SubResource("StyleBoxFlat_2plsk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mc7jh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsutr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d0gah")
text = "Back
"
icon = ExtResource("5_xjh87")

[node name="networking" type="Node" parent="Visibles"]

[node name="Networking_toggle" type="Button" parent="Visibles/networking"]
anchors_preset = -1
anchor_left = 0.202
anchor_top = 0.497
anchor_right = 0.202
anchor_bottom = 0.497
offset_left = -117.704
offset_top = -23.056
offset_right = 176.296
offset_bottom = 34.944
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vgaj8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6jbs")
theme_override_styles/hover = SubResource("StyleBoxFlat_2plsk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mc7jh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsutr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d0gah")
text = "Networking
"

[node name="organization" type="Button" parent="Visibles/networking"]
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.497
anchor_right = 0.483
anchor_bottom = 0.497
offset_left = 240.584
offset_top = -23.056
offset_right = 539.584
offset_bottom = 34.944
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vgaj8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6jbs")
theme_override_styles/hover = SubResource("StyleBoxFlat_2plsk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mc7jh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rsutr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d0gah")
text = "Organization
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lcejl")
}

[node name="Icons8-start-30" type="Sprite2D" parent="."]
position = Vector2(225, 371)
rotation = -1.5708
texture = ExtResource("5_ob7tc")

[node name="Icons8-start-31" type="Sprite2D" parent="."]
position = Vector2(918, 371)
rotation = -1.5708
texture = ExtResource("5_ob7tc")

[connection signal="pressed" from="Visibles/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Visibles/networking/Networking_toggle" to="." method="_on_networking_toggle_pressed"]
[connection signal="pressed" from="Visibles/networking/organization" to="." method="_on_organization_pressed"]
